# hermes-memory-fabric-plugin

./: .gitignore  MANIFEST.in  README.md  plugin.yaml  pyproject.toml
docs/: ACTIVE_CONTEXT_QUALITY_HARNESS.md  APPROVAL_INTENT_DRY_RUN.md  APPROVAL_INTENT_REVIEW_GATE_DRY_RUN.md  APPROVAL_TOKEN_ISSUANCE_DRY_RUN.md  CIVILIZATION_CORE_ARCHITECTURE_ATLAS.md  CIVILIZATION_CORE_ASSOCIATIVE_RECALL_CANDIDATE_DESIGN.md  CIVILIZATION_CORE_BOUNDARY_CONSTITUTION.md  CIVILIZATION_CORE_COMPREHENSIVE_AUDIT_REPORT.md  CIVILIZATION_CORE_CONNECTOR_GOVERNANCE_TAXONOMY.md  CIVILIZATION_CORE_DECISION_GATE_CHECKLIST.md  CIVILIZATION_CORE_DOCUMENT_INDEX.md  CIVILIZATION_CORE_EVALUATION_VOCABULARY_NORMALIZATION_REVIEW.md  CIVILIZATION_CORE_EXPLAINABLE_RECALL_TRACE_TEMPLATE.md  CIVILIZATION_CORE_EXTERNAL_CANDIDATE_COMPARISON.md  CIVILIZATION_CORE_EXTERNAL_PRODUCT_EXPLANATION_CANDIDATE.md  CIVILIZATION_CORE_FAILED_ATTEMPT_MEMORY_DO_NOT_RETRY_RULES.md  CIVILIZATION_CORE_FAQ.md  CIVILIZATION_CORE_FIFTEEN_MEMORY_LAYERS.md  CIVILIZATION_CORE_FINAL_ROADMAP.md  CIVILIZATION_CORE_HANDOFF_PACKAGE.md  CIVILIZATION_CORE_HISTORICAL_DESIGN_CORPUS_SYNTHESIS.md  CIVILIZATION_CORE_HISTORICAL_MACRO_R6_AUDIENCE_AND_GOVERNANCE_ROLE_DECISION_FRAMES.md  CIVILIZATION_CORE_HISTORICAL_MACRO_R6_CONCEPTUAL_PRODUCT_SURFACE_AND_ACTION_BOUNDARY_DECISION_FRAMES.md  CIVILIZATION_CORE_HISTORICAL_MACRO_R6_EXTERNAL_METHODOLOGY_RELEVANCE_AND_NON_ADOPTION_DECISION_FRAMES.md  CIVILIZATION_CORE_HISTORICAL_MACRO_R6_GOVERNED_USER_JOURNEY_STATE_AND_HUMAN_DECISION_POINT_FRAMES.md  CIVILIZATION_CORE_HUMAN_OWNER_IMPLEMENTATION_DECISION.md  (+186 more)
(+912 files in other folders)
